tests/baselines/reference/restParamsWithNonRestParams.errors.txt
tests/cases/compiler/restParamsWithNonRestParams.ts(4,1): error TS2346: Supplied parameters do not match any signature of call target.


==== tests/cases/compiler/restParamsWithNonRestParams.ts (1 errors) ====
    function foo(...b:number[]){}
    foo(); // ok
    function foo2(a:string, ...b:number[]){}
    foo2(); // should be an error
    ~~~~~~
!!! error TS2346: Supplied parameters do not match any signature of call target.
    function foo3(a?:string, ...b:number[]){}
    foo3(); // error but shouldn't be